# aegis-os

./: .gitignore  CHANGELOG.md  CLI_INTEGRATION_PATCH.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  RELEASE_NOTES_v0.5.md  SECURITY.md  V0_5_CLOSURE_REPORT.md  V0_5_RELEASE_CHECKLIST.md  V0_6_PROGRESS_REPORT.md  aegis-os-corrections.patch  aegis-os-critical-hotfix.patch  generate-shared.ps1  generate-skills.ps1
aegis-skills-v1.1.0-en/aegis-skills/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
aegis-skills-v1.1.0-en/aegis-skills/.github/workflows/: quality.yml
aegis-skills-v1.1.0-en/aegis-skills/core/standards/: naming-conventions.md  skill-authoring-standard.md
aegis-skills-v1.1.0-en/aegis-skills/core/templates/: SKILL.template.md  evals.template.json
aegis-skills-v1.1.0-en/aegis-skills/registry/: categories.yaml  skills.registry.json  skills.registry.yaml
aegis-skills-v1.1.0-en/aegis-skills/reports/: AUDIT_REPORT.md  MIGRATION_REPORT.md  TRANSLATION_REPORT.md  VALIDATION_REPORT.md  build-results.txt  pytest-results.txt  source-inventory.json  validation-report.json
aegis-skills-v1.1.0-en/aegis-skills/schemas/: evals.schema.json  skill-manifest.schema.json  skills-registry.schema.json
aegis-skills-v1.1.0-en/aegis-skills/scripts/: build.py  inventory.py  validate.py
aegis-skills-v1.1.0-en/aegis-skills/skills/00-cto/aegis-software-studio/: SKILL.md  manifest.json
aegis-skills-v1.1.0-en/aegis-skills/skills/00-cto/cto/: SKILL.md  manifest.json
aegis-skills-v1.1.0-en/aegis-skills/skills/01-architecture/cloud-architect/: SKILL.md  manifest.json
aegis-skills-v1.1.0-en/aegis-skills/skills/01-architecture/cloud-engineer/: SKILL.md  manifest.json
aegis-skills-v1.1.0-en/aegis-skills/skills/02-engineering/api-engineer/: SKILL.md  (+1 more)
aegis-skills-v1.1.0-en/aegis-skills/src/aegis_skills/: __init__.py  builder.py  cli.py  discovery.py  frontmatter.py  models.py  registry.py  reporting.py  validation.py
aegis-skills-v1.1.0-en/aegis-skills/tests/: test_build.py  test_frontmatter.py  test_repository.py
runtime/: BUILDING.md  README.md  pyproject.toml
runtime/src/aegis_runtime/: __init__.py  asset_resolver.py  cli.py  config.py  doctor.py  exports.py  generators.py  models.py  plugins.py  py.typed  registry_loader.py  reports.py  validator.py
runtime/src/aegis_runtime.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
runtime/src/aegis_runtime/execution/: __init__.py  audit.py  audit_authentication.py  audit_authentication_config.py  audit_history.py  audit_integrity.py  audit_protection.py  audit_verification.py  context.py  context_builder.py  contract_builder.py  contract_validator.py  contracts.py  input_resolver.py  lifecycle.py  lifecycle_store.py  models.py  orchestration_store.py  orchestrator.py  planner.py  runner.py  session.py  session_builder.py  session_loader.py  workspace.py  workspace_store.py
(+1322 files in other folders)
