[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aegis-runtime"
version = "0.8.0"
description = "Python runtime foundation for Aegis OS"
readme = "README.md"
requires-python = ">=3.11"
license = "LicenseRef-Aegis-OS-BSL-1.1"
license-files = ["LICENSE"]
authors = [{ name = "Aegis OS Contributors" }]
keywords = ["aegis", "registry", "automation", "validation", "cli"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = ["PyYAML>=6.0"]

[project.optional-dependencies]
dev = ["build>=1.2", "pytest>=8.0"]

[project.urls]
Homepage = "https://github.com/g4briel-x/aegis-os"
Repository = "https://github.com/g4briel-x/aegis-os"
Issues = "https://github.com/g4briel-x/aegis-os/issues"

[project.scripts]
aegis = "aegis_runtime.cli:main"
aegis-runtime = "aegis_runtime.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
aegis_runtime = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["../tests/runtime"]
addopts = "-q"
