[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aegis-skills-tooling"
version = "1.1.0"
description = "Python validation and packaging tooling for Aegis Skills"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
  "PyYAML>=6.0,<7",
  "jsonschema>=4.22,<5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<10",
  "ruff>=0.8,<1",
]

[project.scripts]
aegis-skills = "aegis_skills.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 120
exclude = ["dist", "build"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
